[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://entities/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 36.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 3 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 9 )
shape = SubResource( 1 )

[node name="JumpSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -21.743

[node name="GroundCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheck"]
position = Vector2( 0, 48 )
shape = SubResource( 5 )

[connection signal="body_entered" from="GroundCheck" to="." method="_on_GroundCheck_body_entered"]
[connection signal="body_exited" from="GroundCheck" to="." method="_on_GroundCheck_body_exited"]
